<resources>
    <string name="app_name">client</string>

    <string name="lb_user_list_empty">List User is empty</string>
    <string name="lb_user_name">User Name</string>
    <string name="lb_user_age">User Age</string>
    <string name="lb_city_name">City Name</string>
    <string name="lb_user_add">Add User</string>
    <string name="lb_user_update">Update User</string>
    <string name="lb_yes">Yes</string>
    <string name="lb_no">No</string>

    <string name="add_user_success">Add User Success</string>
    <string name="delete_user_success">Delete User Success</string>
    <string name="update_user_success">Update User Success</string>
    <string name="status_fail">Status Fail</string>

    <string name="dialog_user">Notification User</string>
    <string name="dialog_user_delete">Are you sure you want to delete this user?</string>

    <!--String product-->
    <string name="lb_product_list">List Product Server</string>
    <string name="lb_product_list_empty">List Product is empty</string>
    <string name="lb_product_name">Product Name</string>
    <string name="lb_product_price">Product Price</string>
    <string name="lb_product_desc">Product Desc</string>
    <string name="lb_product_image">Select product image</string>
    <string name="lb_product_add">Add Product</string>
    <string name="lb_product_update">Update Product</string>

    <string name="lb_toast_check_value">Please fill all fields</string>

</resources>