<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lb_product_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_product_name"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lb_product_price"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_product_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_product_price"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_product_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lb_product_desc" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_120"
        android:layout_marginTop="@dimen/dimen_50"
        android:src="@drawable/ic_add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_product_desc"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/tv_product_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lb_product_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_product"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_product_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_product_add"
        app:layout_constraintBottom_toTopOf="@+id/btn_product_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_image"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_product_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_product_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
